# soepdoku

./: .gitignore  LICENSE  README.md  pyproject.toml
soepdoku/: __init__.py  const.py  filter.py  filter_parser.py  handler.py  item.py  merge.py  parser.py  reader.py  stata.py  translator.py  utils.py  writer.py
tests/: test_filter_parser.py
tests/SOEPmetadata/datasets/selfempl2022-simple/v39/: variable_categories.csv  variables.csv
tests/SOEPmetadata/questionnaires/soep-core-2022-selfempl-simple/: answers.csv  questions.csv
