[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soepdoku"
version = "v0.1.5"
dependencies = [
  "pyparsing",
  "sympy",
]

requires-python = ">=3.8"
authors = [
  {name = "Christoph Halbmeier", email = ""},
]
maintainers = [
  {name = "Christoph Halbmeier", email = ""}
]

description = "A package to facilitate work with SOEP metadata."
readme = "README.md"


[project.optional-dependencies]
complete = [
  "pandas",
  "deepl",
  "numpy",
]

[project.scripts]
parse_filters = "soepdoku.reader:read_csv_cli"